--- a/canvas-elements-generator-1.0/vercel.json
+++ b/canvas-elements-generator-1.0/vercel.json
@@ -1,8 +1,3 @@
 {
-  "buildCommand": "npm run build",
-  "outputDirectory": "dist",
-  "framework": "vite",
-  "rewrites": [
-    { "source": "/(.*)", "destination": "/" }
-  ]
+  "rootDirectory": "canvas-elements-generator-1.0"
 }
